added filtering on date for logs
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@8101 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/app/app.component.css
+++ b/UtlsLogTool/app/app.component.css
@@ -64,7 +64,7 @@
 
 .utls-selector-text{
     font-size: 16px;
-    display: inline;
+    display: inline-flex;
 }
 
 
@@ -81,4 +81,20 @@
 .utls-logfilter-column{
     float: left;
     padding-bottom: 10px;
+}
+
+.calendardiv{
+    color: black;
+    display: inline-flex;
+    position: absolute;
+}
+
+.calendaricon{
+    display: inline-flex;
+}
+
+.calendarInput{
+    width: auto;
+    display: inline-flex;
+    height: 20px;
 }
