added filtering on hours and minutes and a clock-icon to adjust just that besides the date
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@8105 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/app/app.component.css
+++ b/UtlsLogTool/app/app.component.css
@@ -89,8 +89,25 @@
     position: absolute;
 }
 
+.timepickerdiv{
+    background-color: white;
+    padding: 5px;
+    border-color: black;
+    border-width: 1px;
+    border-style: solid;
+}
+
+.calendarIconBundle{
+    display: inline-block;
+}
+
 .calendaricon{
     display: inline-flex;
+}
+
+.clockicon{
+    display: inline-flex;
+    padding-left: 3px;
 }
 
 .calendarInput{
