added clear-filter-btn and removed header with user transactionlogs...
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@8117 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/app/app.component.html
+++ b/UtlsLogTool/app/app.component.html
@@ -1,8 +1,4 @@
 <div class="utls-selector-row">
-    <div class="utls-header-text">
-        <h1 class="utls-text">User transaction-logs</h1>
-    </div>
-
 
     <div class="utls-logfilter-column">
         <div class="utls-selector-text utls-text">
@@ -34,8 +30,12 @@
         </select>
     </div>
 
+    <timefilter></timefilter>
 
-<timefilter></timefilter>
+    <div class="utls-logfilter-column">
+        <button class="btn btn-primary btn-md" (click)="resetFilter()">Clear filter</button>
+    </div>
+
 </div>
 
 <div hidden>{{clock | async}}</div>
