removed header and fix that column-content is refilled from original file when clearing filter
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@8120 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/app/app.component.html
+++ b/UtlsLogTool/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="utls-selector-row">
+<div class="utls-selector-row" *ngIf="isLoaded">
 
     <div class="utls-logfilter-column">
         <div class="utls-selector-text utls-text">
@@ -7,8 +7,7 @@
 
         <select class="form-control utls-select"
                 [(ngModel)]="selectedColumn"
-                (ngModelChange)="changeColumn($event)"
-                *ngIf="isLoaded">
+                (ngModelChange)="changeColumn($event)">
             <option>--- Select column ---</option>
             <option>All</option>
             <option *ngFor="let col of cols" [ngValue]="col">{{col.name}}</option>
@@ -22,8 +21,7 @@
 
         <select class="form-control utls-select" value
                 [(ngModel)]="selectedContent"
-                (ngModelChange)="changeLogContent($event)"
-                *ngIf="isLoaded">
+                (ngModelChange)="changeLogContent($event)">
             <option>--- Select ---</option>
             <option>All</option>
             <option *ngFor="let con of columnContent | dtoSort" [ngValue]="con">{{con.value}}</option>
