fix of saving ip-settings and alert with name of saved file
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@8149 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/app/utlSettings.component.html
+++ b/UtlsLogTool/app/utlSettings.component.html
@@ -6,4 +6,5 @@
 
     <button *ngIf="showSave" class="btn btn-primary btn-sm" (click)="saveValues()">Save ip</button>
     <button *ngIf="showFetch" class="btn btn-primary btn-sm" (click)="fetchLogs()">Fetch logs</button>
+    <button class="btn btn-primary btn-sm" (click)="close()">Close</button>
 </div>
