added a waiting-view while waiting for logs from utl-server and some other stuff regarding different views
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@8280 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/app/app.component.css
+++ b/UtlsLogTool/app/app.component.css
@@ -67,6 +67,12 @@
     display: inline-flex;
 }
 
+.utls-discrete-text{
+    font-size: 12px;
+    display: inline-flex;
+    color: white;
+}
+
 
 .utls-select{
     width: 350px;
