--- a/UtlsLogTool/app/app.component.html
+++ b/UtlsLogTool/app/app.component.html
@@ -1,8 +1,24 @@
-<div *ngIf="showSettings" class="promptDiv">
+<div *ngIf="views[constants.VIEW_SETTINGS].show" class="promptDiv">
     <utlSettings [showMe]="showSettings" (isVisibleEvent)="closeSettings($event)"></utlSettings>
 </div>
 
-<div *ngIf="showLogs">
+<div *ngIf="views[constants.VIEW_WAIT].show" class="sk-circle">
+    <div class="sk-circle1 sk-child"></div>
+    <div class="sk-circle2 sk-child"></div>
+    <div class="sk-circle3 sk-child"></div>
+    <div class="sk-circle4 sk-child"></div>
+    <div class="sk-circle5 sk-child"></div>
+    <div class="sk-circle6 sk-child"></div>
+    <div class="sk-circle7 sk-child"></div>
+    <div class="sk-circle8 sk-child"></div>
+    <div class="sk-circle9 sk-child"></div>
+    <div class="sk-circle10 sk-child"></div>
+    <div class="sk-circle11 sk-child"></div>
+    <div class="sk-circle12 sk-child"></div>
+</div>
+
+<div *ngIf="views[constants.VIEW_LOGS].show">
+
     <div class="utls-selector-row" *ngIf="isLoaded">
 
         <div class="utls-logfilter-column">
@@ -130,5 +146,13 @@
 
         </table>
     </div>
+
+    <div class="utls-selector-row" *ngIf="isLoaded">
+        <div class="utls-discrete-text">
+            Logs from file: {{logfileName}}
+        </div>
+
+    </div>
+
 
 </div>
