- fetching encrypted logs - added from and to - timeinterval to narrow the amount of logs - added possibility to open logs when it arrives from server - added unsubscribe and some robustness when socket goes down
git-svn-id: svn://10.33.1.15/syseng/trunk/UserTransactionLog@8315 403474d4-8537-446f-9ecb-d9f2842470be

--- a/UtlsLogTool/app/app.component.css
+++ b/UtlsLogTool/app/app.component.css
@@ -102,6 +102,10 @@
     border-style: solid;
 }
 
+.fetchLogDiv{
+    padding: 5px;
+}
+
 .calendarIconBundle{
     display: inline-block;
 }
@@ -123,5 +127,10 @@
 
 .promptDiv{
     width: 10%;
+    padding: 10px;
+}
+
+.promptDivWide{
+    width: 50%;
     padding: 10px;
 }
